# TupoVRFY

./: .clang-format  .gitignore  CMakeLists.txt  config.h.in
.github/workflows/: ubuntu.yml
all/: CMakeLists.txt
cmake/: project.cmake
include/: EmailVerification.hpp  socket_wrapper.hpp  verifier.hpp  vrf.h  vrf.hpp  vrf_data.hpp
source/: EmailVerification.cpp  socket_wrapper.cpp  verifier.cpp  vrf.cpp
src/: EmailVerification.cpp  vrf.c
standalone/: CMakeLists.txt
standalone/source/: verifier.cpp
test/: CMakeLists.txt
test/source/: EmailVerification.cpp  MXCheck.cpp  vrf.cpp
test/source/mocks/: mock_socket.hpp
